# coding-buddy-rocky

./: README.md  main.py  pyproject.toml
agent/: __init__.py  graph.py  prompts.py  states.py  tools.py
generated_calculator_project/: index.html  script.js  styles.css
generated_grocery-list_project/: index.html  script.js  styles.css
generated_todo-list_project/: index.html
generated_todo-list_project/script/: app.js  utils.js
generated_todo-list_project/styles/: styles.css
resources/: calculator.mkv  todo-list.mkv
