[project]
name = "coding-buddy-rocky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-ollama>=1.1.0",
    "langgraph>=0.6.3",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]
